# Checkmate-Escrow

./: .gitignore  BUILD_AND_CI_VERIFICATION.md  CI_FAILURES_ANALYSIS.md  CI_FAILURES_ARE_PREEXISTING.md  CI_FIXES_APPLIED.md  CONTRIBUTING.md  Cargo.toml  FINAL_DELIVERY_SUMMARY.md  Makefile  PR_CREATED.md  README.md  SECURITY.md  SWAP_FIX_SUMMARY.md  SWAP_SECURITY_FIX_INDEX.md  SWAP_VULNERABILITY_COMPLETE_FIX.md  SWAP_VULNERABILITY_FIX_CHECKLIST.md  TODO.md  docker-compose.yml
.github/workflows/: ci.yml  doc-conformance.yml
contracts/escrow/: Cargo.toml  formal_spec.json
contracts/oracle/: Cargo.toml
contracts/oracle/src/: errors.rs  lib.rs  tests.rs  types.rs
contracts/oracle/tests/: benchmarks.rs
docs/: EVENT_INDEXER_API.md  HEALTH_CHECK_IMPLEMENTATION.md  SWAP_SECURITY_AUDIT.md  architecture.md  cost-of-attack-model.md  deployment.md  dispute-governance.md  doc-conformance.md  error-codes.md  health-check-integration.md  match-lifecycle.md  monitoring-health-checks.md  openapi.yaml  oracle.md  performance-report.md  privacy-model.md  runbook-emergency-pause.md  security.md  swagger-ui.html  tutorial-step-by-step.md  websocket-api.md
frontend/: lighthouserc.js  package-lock.json  package.json
oracle-service/: Cargo.toml
oracle-service/src/: health.rs  lib.rs  main.rs  soroban_client.rs
oracle-service/tests/: chess_com_client_unit.rs  common.rs  health_check.rs
scripts/: check_api_refs.sh  check_doc_conformance.sh  require_doc_update.sh  test_doc_conformance.sh  verify_contract.sh
scripts/doc_conformance/: check.py  extract_facts.py
(+103 files in other folders)
