[workspace]
members = ["contracts/escrow", "contracts/oracle", "oracle-service", "services/event-indexer"]
resolver = "2"
license = "MIT"

[workspace.dependencies]
soroban-sdk = "27.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
