[package]
name = "oracle"
version = "0.1.0"
edition = "2021"
description = "Oracle contract for verifying chess match results on Stellar Soroban"
repository = "https://github.com/StellarCheckMate/Checkmate-Escrow"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "26.1.0"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
escrow = { path = "../escrow" }
